# submate

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.claude/: grind.config.js
backlog/: README.md  align-bazarr-asr-query-validation-422.md  align-bazarr-route-signatures.md  align-config-custom-regroup-false-coercion.md  align-config-pipe-and-json-coercion.md  align-config-str-strip-whitespace.md  align-jellyfin-webhook-body-validation-422.md  align-jellyfin-webhook-response-shape.md  align-jellyfin-webhook-route.md  align-lang-iso6392-reverse-lookup.md  align-paths-language-naming-native-iso639t.md  align-queue-stats-response-shape.md  align-server-http-error-body-detail-key.md  bug-parity-media-audio-track-iso639-normalization.md  bug-parity-stable-ts-clamp-max-median.md  bug-parity-submate-paths-dot-relative-parent.md  bug-parity-submate-proto-output-format-ass-variant.md  capture-stablets-nonvad-dsp-goldens.md  cli-audio-decode-language.md  cli-audio-interactive-picker.md  cli-audio-lang-normalize.md  cli-audio-probe-command.md  cli-audio-selector-grammar.md  cli-audio-track-disposition.md  meta-capture-prepass.md  meta-contention.md  meta-grind-config-drift-check.md  meta-merge-abandon-race.md  meta-token-cost-tooling-missing.md  parity-cli-transcribe-summary.md  parity-jellyfin-client.md  parity-media-probe-json.md  (+87 more)
crates/submate-cli/: Cargo.toml
crates/submate-cli/src/: config_show.rs  main.rs  transcribe_collect.rs  translate_paths.rs
crates/submate-config/: Cargo.toml
crates/submate-config/src/: lib.rs
crates/submate-config/tests/: parity.rs
crates/submate-media/: Cargo.toml
crates/submate-media/src/: lib.rs
crates/submate-node/: Cargo.toml
crates/submate-node/src/: lib.rs
crates/submate-proto/: Cargo.toml
crates/submate-proto/src/: lib.rs
crates/submate-queue/: Cargo.toml
crates/submate-queue/src/: lib.rs  models.rs
crates/submate-queue/tests/: parity.rs
crates/submate-server/: Cargo.toml
crates/submate-server/src/: lib.rs
crates/submate-server/tests/: parity.rs
crates/submate-translate/: Cargo.toml
crates/submate-translate/src/: lib.rs
crates/submate-translate/tests/: apply.rs  chunking.rs
crates/submate-types/: Cargo.toml
crates/submate-types/src/: lib.rs
crates/submate-types/tests/: parity.rs
crates/submate-whisper/: Cargo.toml
crates/submate-whisper/examples/: demo.rs
crates/submate-whisper/src/: lib.rs
crates/submate-whisper/tests/: parity.rs
nix/: devshell.nix  (+1 more)
rust/: Cargo.toml  README.md
rust/crates/parity/: Cargo.toml
rust/crates/parity/src/: lib.rs
rust/crates/stable-ts/: Cargo.toml
rust/crates/stable-ts/src/: lib.rs  model.rs  output.rs  regroup.rs  suppress_silence.rs
rust/crates/stable-ts/tests/: parity.rs
rust/crates/submate-bazarr/: Cargo.toml
rust/crates/submate-bazarr/src/: lib.rs
rust/crates/submate-cli/: Cargo.toml
rust/crates/submate-cli/src/: config_show.rs  main.rs  transcribe_collect.rs  translate_paths.rs
rust/crates/submate-config/: Cargo.toml
rust/crates/submate-config/src/: lib.rs
rust/crates/submate-config/tests/: parity.rs
rust/crates/submate-jellyfin/: Cargo.toml
rust/crates/submate-jellyfin/src/: lib.rs
rust/crates/submate-jellyfin/tests/: parity.rs
rust/crates/submate-lang/: Cargo.toml
rust/crates/submate-lang/src/: lib.rs
rust/crates/submate-lang/tests/: parity.rs
rust/crates/submate-media/: Cargo.toml
rust/crates/submate-media/src/: lib.rs
rust/crates/submate-node/: Cargo.toml
rust/crates/submate-node/src/: lib.rs
rust/crates/submate-paths/: Cargo.toml
rust/crates/submate-paths/src/: lib.rs
rust/crates/submate-paths/tests/: parity.rs
rust/crates/submate-proto/: Cargo.toml
rust/crates/submate-proto/src/: lib.rs
rust/crates/submate-queue/: Cargo.toml
rust/crates/submate-queue/src/: lib.rs  models.rs
rust/crates/submate-server/: Cargo.toml
rust/crates/submate-server/src/: lib.rs
rust/crates/submate-server/tests/: parity.rs
rust/crates/submate-subtitle/: Cargo.toml
rust/crates/submate-subtitle/src/: cue.rs  discovery.rs  lib.rs
rust/crates/submate-subtitle/tests/: parity.rs
rust/crates/submate-translate/: Cargo.toml
rust/crates/submate-translate/src/: lib.rs
rust/crates/submate-translate/tests/: apply.rs  chunking.rs
rust/crates/submate-types/: Cargo.toml
rust/crates/submate-types/src/: lib.rs
rust/crates/submate-types/tests/: enum_values.rs
rust/crates/submate-whisper/: Cargo.toml
rust/crates/submate-whisper/examples/: demo.rs
rust/crates/submate-whisper/src/: lib.rs
rust/crates/submate-whisper/tests/: parity.rs
rust/docs/: architecture.md
rust/fixtures/: README.md
rust/fixtures/bazarr/pcm/: sine440.pcm
rust/fixtures/capture/: README.md  _common.py  capture_bazarr_audio.py  capture_bazarr_lang.py  capture_cli_config.py  capture_cli_transcribe.py  capture_cli_translate.py  capture_config.py  capture_core_router.py  capture_enums.py  capture_lang.py  capture_media.py  capture_paths.py  capture_queue.py  capture_queue_enums.py  capture_stablets.py  capture_subtitle.py  capture_subtitle_discovery.py  capture_translate.py  run_deterministic.sh
rust/fixtures/cli/: config_show.defaults.rows.json  config_show.overridden.rows.json  transcribe_collect_cases.json  transcribe_supported_extensions.json
rust/fixtures/config/: defaults.resolved.json  nested.env  nested.resolved.json  validators.resolved.json
rust/fixtures/lang/: lang_conversions.json
rust/fixtures/paths/: path_cases.json
rust/fixtures/queue/: bazarr_language_names.json  enum_values.json  task_envelopes.json
rust/fixtures/server/: core_router.json
rust/fixtures/stablets/clipA/: 00_raw.json  01_regroup_0_clamp_max.json  01_regroup_2_split_by_length.json  01b_regroup_sp.json  01c_regroup_mp.json  01c_regroup_sd.json  03.vtt  audio.f32  mask.f32  output.ass  output.json
rust/fixtures/subtitle/: basic.srt  discovery_cases.json  single.srt
rust/fixtures/transcribe/: clipA.segments.json
rust/fixtures/translate/: chunking.json  mock_llm.json  sampleA.in.srt  sampleA.out.srt
(+210 files in other folders)
