[workspace]
resolver = "2"
members = [
  "crates/submate-types",
  "crates/submate-lang",
  "crates/submate-config",
  "crates/submate-proto",
  "crates/stable-ts",
  "crates/submate-subtitle",
  "crates/submate-paths",
  "crates/submate-media",
  "crates/submate-whisper",
  "crates/submate-node",
  "crates/submate-translate",
  "crates/submate-bazarr",
  "crates/submate-queue",
  "crates/submate-server",
  "crates/submate-cli",
  "crates/parity",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/aldoborrero/submate"

# One pinned version per shared dependency. Crates opt in with
# `dep = { workspace = true }`. Unused entries are not resolved, so the
# empty-stub baseline builds without fetching any of these.
[workspace.dependencies]
# async + runtime
tokio = { version = "1", features = ["full"] }
# async trait methods (keeps `Box<dyn Backend>` object-safe)
async-trait = "0.1"
# OpenAI-compatible chat client (covers OpenAI + Ollama + Gemini via base_url).
# Only the chat-completions surface is needed; `default-features = false` drops
# the rest of the API. `rustls` matches the workspace's TLS backend.
async-openai = { version = "0.41", default-features = false, features = [
  "chat-completion",
  "rustls",
] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# enums matching Python `.value` strings
strum = { version = "0.26", features = ["derive"] }
# config (Pydantic-Settings analogue)
figment = { version = "0.10", features = ["env", "json"] }
# http
axum = "0.7"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
  "charset",
  "http2",
] }
tower = "0.5"
# cli + logging
clap = { version = "4", features = ["derive"] }
# live progress spinner/bar for `transcribe --sync` (disables its own TTY
# detection so the CLI controls TTY vs. plain-line fallback explicitly).
indicatif = { version = "0.18", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# storage
rusqlite = { version = "0.32", features = ["bundled"] }
# paths
camino = "1"
# errors
thiserror = "2"
anyhow = "1"
# whisper (added by the port-whisper-rs-wire backlog item, not the stub)
whisper-rs = "0.16"
# test-only
float-cmp = "0.10"
pretty_assertions = "1"
wiremock = "0.6"
sha2 = "0.10"
hex = "0.4"

# Shared lints — every crate sets `[lints] workspace = true`.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Curated modernization lints (not full `pedantic` — these are the low-noise
# ones that keep the code idiomatic on a recent Rust: inline format args,
# let-else, `Self`, std constructors, tidy control flow). They are denied by the
# `-D warnings` gate, so the bar holds automatically.
uninlined_format_args = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
use_self = "warn"
manual_string_new = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"

[workspace.lints.rust]
unused_must_use = "warn"
