[package]
name = "submate-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
submate-lang = { path = "../submate-lang" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
