[package]
name = "submate-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
submate-proto = { path = "../submate-proto" }
submate-translate = { path = "../submate-translate" }
submate-whisper = { path = "../submate-whisper" }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whisper-rs = { workspace = true, optional = true }

[dev-dependencies]
async-trait = { workspace = true }
submate-types = { path = "../submate-types" }
wiremock = { workspace = true }

[features]
# `model` forwards to submate-whisper's real whisper.cpp inference, enabling
# `Dispatcher::transcribe_pcm`. Off by default so CI builds without a model.
default = []
# `whisper-cpp-tracing` exposes whisper-rs's tracing trampoline so whisper.cpp's
# stderr logging is redirected through `tracing` at model init.
model = [
  "submate-whisper/model",
  "dep:whisper-rs",
  "whisper-rs/tracing_backend",
]
# GPU backends — forward to submate-whisper's backend feature (which compiles
# whisper.cpp with that backend and enables the GPU).
cuda = ["model", "submate-whisper/cuda"]
metal = ["model", "submate-whisper/metal"]
hipblas = ["model", "submate-whisper/hipblas"]
vulkan = ["model", "submate-whisper/vulkan"]
intel-sycl = ["model", "submate-whisper/intel-sycl"]

[lints]
workspace = true
