[package]
name = "submate-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
submate-types = { path = "../submate-types" }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
