[package]
name = "submate-queue"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
submate-types = { path = "../submate-types" }
rusqlite = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
parity = { path = "../parity" }
serde_json = { workspace = true }

[lints]
workspace = true
