[package]
name = "submate-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
fixtures = { path = "../fixtures" }
serde_json = { workspace = true }

[lints]
workspace = true
