[package]
name = "submate-whisper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# `model` pulls in whisper-rs and compiles whisper.cpp. Off by default so CI
# without a model (and without LIBCLANG_PATH/cmake) still builds the crate.
default = []
model = ["dep:whisper-rs"]
# GPU backends for whisper.cpp inference. Each enables `model` and forwards to
# the matching whisper-rs backend, which compiles whisper.cpp with that backend
# and flips `WhisperContextParameters::use_gpu` to default `true`. Pick the one
# matching the host GPU; each needs its toolkit at build time (CUDA toolkit /
# Apple Metal / AMD ROCm). whisper-rs 0.12 has no Vulkan/Intel backend — that
# needs the whisper-rs upgrade.
cuda = ["model", "whisper-rs/cuda"]
metal = ["model", "whisper-rs/metal"]
hipblas = ["model", "whisper-rs/hipblas"]
vulkan = ["model", "whisper-rs/vulkan"]
intel-sycl = ["model", "whisper-rs/intel-sycl"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
stable-ts = { path = "../stable-ts" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whisper-rs = { workspace = true, optional = true }

[dev-dependencies]
parity = { path = "../parity" }

[lints]
workspace = true
