[package]
name = "parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Dev-only helpers shared by every crate's `tests/`: load golden fixtures
# captured from the Python implementation and assert Rust output matches.
[dependencies]
serde_json = { workspace = true }
float-cmp = { workspace = true }

[lints]
workspace = true
