[package]
name = "submate-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "submate"
path = "src/main.rs"

[features]
# `model` forwards the embedded/remote node's processor to submate-node's real
# whisper.cpp inference (`whisper_processor`, itself gated on `submate-node/model`).
# Off by default so the CLI builds and tests without a model — the node then runs
# a processor that reports "model support not built in" for any job.
default = []
model = ["submate-node/model"]
# GPU backends — build the CLI (and its embedded node) with whisper.cpp GPU
# acceleration. Pick the one matching the host GPU; needs the backend toolkit at
# build time. `nix build .#docker-gpu` builds with `cuda`.
cuda = ["model", "submate-node/cuda"]
metal = ["model", "submate-node/metal"]
hipblas = ["model", "submate-node/hipblas"]
vulkan = ["model", "submate-node/vulkan"]
intel-sycl = ["model", "submate-node/intel-sycl"]

[dependencies]
submate-lang = { path = "../submate-lang" }
submate-config = { path = "../submate-config" }
submate-types = { path = "../submate-types" }
submate-proto = { path = "../submate-proto" }
submate-queue = { path = "../submate-queue" }
submate-media = { path = "../submate-media" }
submate-server = { path = "../submate-server" }
submate-node = { path = "../submate-node" }
submate-paths = { path = "../submate-paths" }
submate-subtitle = { path = "../submate-subtitle" }
submate-translate = { path = "../submate-translate" }
submate-whisper = { path = "../submate-whisper" }
submate-bazarr = { path = "../submate-bazarr" }
axum = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
# `preserve_order` keeps serde_json object keys in struct field-declaration
# order; the `config show` table rows (and the `config_show_rows` parity test)
# require the serialized `Config` to mirror Pydantic field order, not the
# default BTreeMap key sorting.
serde_json = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
# `parity::EnvGuard` isolates the env (clears `SUBMATE__*`, sets overrides,
# serialized + restored on drop) for the `config_show` parity test.
parity = { path = "../parity" }

[lints]
workspace = true
