[package]
name = "submate-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
submate-types = { path = "../submate-types" }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }

[dev-dependencies]
parity = { path = "../parity" }
serde_json = { workspace = true }

[lints]
workspace = true
