[package]
name = "submate-paths"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
camino = { workspace = true }
submate-lang = { path = "../submate-lang" }
submate-types = { path = "../submate-types" }

[dev-dependencies]
parity = { path = "../parity" }
serde_json = { workspace = true }

[lints]
workspace = true
