[package]
name = "submate-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["bazarr", "jellyfin"]
# Feature-flagged integration routers. Ops routes are always present.
bazarr = []
jellyfin = ["dep:submate-jellyfin"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
submate-proto = { path = "../submate-proto" }
submate-queue = { path = "../submate-queue" }
submate-types = { path = "../submate-types" }
submate-jellyfin = { path = "../submate-jellyfin", optional = true }

[dev-dependencies]
http-body-util = "0.1"

[lints]
workspace = true
