[package]
name = "submate-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["bazarr", "jellyfin"]
# Feature-flagged integration routers. Ops routes are always present.
bazarr = []
jellyfin = ["dep:submate-jellyfin"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
submate-node = { path = "../submate-node" }
submate-proto = { path = "../submate-proto" }
submate-queue = { path = "../submate-queue" }
submate-types = { path = "../submate-types" }
submate-media = { path = "../submate-media" }
submate-jellyfin = { path = "../submate-jellyfin", optional = true }
submate-config = { path = "../submate-config" }

[dev-dependencies]
parity = { path = "../parity" }
http-body-util = "0.1"
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
