[package]
name = "submate-subtitle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
submate-lang = { path = "../submate-lang" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
parity = { path = "../parity" }

[lints]
workspace = true
