[package]
name = "submate-translate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
submate-subtitle = { path = "../submate-subtitle" }

[dev-dependencies]
parity = { path = "../parity" }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
