[package]
name = "submate-whisper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# `model` pulls in whisper-rs and compiles whisper.cpp. Off by default so CI
# without a model (and without LIBCLANG_PATH/cmake) still builds the crate.
default = []
model = ["dep:whisper-rs", "dep:submate-media"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
stable-ts = { path = "../stable-ts" }
submate-media = { path = "../submate-media", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whisper-rs = { workspace = true, optional = true }

[dev-dependencies]
parity = { path = "../parity" }

[lints]
workspace = true
